# bfsdk

./: .appveyor.yml  .doxygen.txt  .travis.yml  CMakeLists.txt  README.md
cmake/: CMakeFlags_Native_GCC.txt  CMakeFlags_Native_VS.txt  CMakeFlags_VMM.txt  CMakeGlobal_Includes.txt  CMakeGlobal_Project.txt  CMakeOption_ASan.txt  CMakeOption_Astyle.txt  CMakeOption_Coverage.txt  CMakeOption_Coverage_LLVM.txt  CMakeOption_Testing.txt  CMakeOption_Tidy.txt  CMakeOption_USan.txt  CMakeTarget_Coverage.txt  CMakeTarget_Format.txt  CMakeTarget_Tidy.txt  CMakeToolchain_VMM.txt  CMakeToolchain_VMM_38.txt  CMakeToolchain_VMM_39.txt  CMakeToolchain_VMM_40.txt
include/: bfbuffer.h  bfconstants.h  bfdebug.h  bfdebugringinterface.h  bfdriverinterface.h  bferrorcodes.h  bfexception.h  bfexports.h  bffile.h  bfgsl.h  bfjson.h  bfnewdelete.h  bfplatform.h  bfpublish.h  bfshuffle.h  bfstd.h  bfstring.h  bfsupport.h  bfthreadcontext.h  bftypes.h  bfvector.h  bfvmcallinterface.h
scripts/: bareflank_astyle_format.sh  bareflank_clang_format.sh  bareflank_clang_tidy.sh  bareflank_llvm_cov.sh  compiler_wrapper.sh  create_linker.sh  enable_unittesting.sh  export_path.sh  link_newlib.sh
test/: CMakeLists.txt  test_bitmanip.cpp  test_buffer.cpp  test_debug.cpp  test_errorcodes.cpp  test_exceptions.cpp  test_file.cpp  test_shuffle.cpp  test_string.cpp  test_vector.cpp
tests/: CMakeLists.txt  test_bitmanip.cpp  test_debug.cpp  test_errorcodes.cpp  test_exceptions.cpp  test_file.cpp  test_string.cpp  test_upperlower.cpp  test_vector.cpp
